migration(DS-030): SQLite Native Library 与平台架构打包
Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>